--- a/webserver/src/app/config-tabs/config-tabs.component.scss
+++ b/webserver/src/app/config-tabs/config-tabs.component.scss
@@ -4,3 +4,10 @@
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
 }
+
+.md-button {
+    /*For Lower case use lowercase*/
+    /*For Upper case use capitalize*/
+    // text-transform: lowercase !important;
+    text-transform: none !important;
+}
