Added input for ws send messages

--- a/webserver/src/app/config-tabs/config-tabs.component.scss
+++ b/webserver/src/app/config-tabs/config-tabs.component.scss
@@ -5,6 +5,7 @@
     border-top-right-radius: 3px;
 }
 
+// For nbButton:
 .md-button {
     /*For Lower case use lowercase*/
     /*For Upper case use capitalize*/
