--- a/webserver/src/app/config-tabs/config-tabs.component.html
+++ b/webserver/src/app/config-tabs/config-tabs.component.html
@@ -221,11 +221,6 @@
 <!-- <div id="buttons" body class="panel-body"> -->
   <div class="col-md-12">
 
-    <!-- <button class="md-button" [nbSpinner]="savingPOST" [disabled]='!configTabsForm.valid || savingPOST' 
-      nbSpinnerStatus="success" nbButton status="info" (click)="saveConfigTabs()">
-      Save
-    </button> -->
-
     <button [nbSpinner]="savingPOST" nbSpinnerStatus="success" (click)="saveConfigTabs()" [disabled]='!configTabsForm.valid || savingPOST' id="SaveConfig"
     class="btn btn-primary ml-2" type="submit">
     <ng-container *ngIf="savingPOST; else elseTemplate">
@@ -240,7 +235,11 @@
             class="btn btn-success ml-2" type="submit">Restart device</button>
 
     <button (click)="loadConfigFile()" id="LoadConfig" class="btn btn-warning ml-2" type="submit">Load configs</button>
-    <button (click)="configFactoryDefaults()" id="Factory" class="btn btn-danger ml-2" type="submit">Factory defaults</button>
+    <button [nbPopover]="templateRef" nbPopoverPlacement="top" id="Factory" class="btn btn-danger ml-2">Factory defaults</button>
+    <ng-template #templateRef id="FactoryConfirm">
+        <button (click)="configFactoryDefaults()" class="btn btn-outline-danger btn-sm" type="submit">Confirm</button>
+    </ng-template>
+
     <button (click)="gpioTest()" id="gpio_test" class="btn btn-info ml-2" type="submit">GPIO LED test</button>
   </div>
 </div>
