--- a/webserver/src/styles-app-loading.css
+++ b/webserver/src/styles-app-loading.css
@@ -2,4 +2,5 @@
 	 width: 100px;
 	 height: 100px;
 	 background: url(./assets/chiplogo.png) center center no-repeat;
+	 background-size: 200px 200px;
 }
